k8s/pinponfel/jenkins/jenkins-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk11
        ports:
        - containerPort: 8080
        # - containerPort: 50000
        # resources:
        #   requests:
        #     cpu: 500m
        #     memory: 1024Mi
        #   limits:
        #     cpu: 2000m
        #     memory: 2048Mi
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      # - name: jenkins-home
      #   emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
