k8s/pinponfel/jenkins/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: jenkins
  labels:
    app: jenkins
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: jenkins
  type: NodePort
