k8s/pinponfel/jenkins/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls: 
  - hosts:
    - jenkins.felagonell.com
    secretName: jenkins-tls-secret
  rules:
  - host: jenkins.felagonell.com
    http:
      paths:
      - backend:
          serviceName: jenkins-svc
          servicePort: 8080
        path: /
